log
Thu 25 Apr 2024 04:03:29 PM UTC: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:41:8: error: expected expression before ‘,’ token
   41 |   hash(, long capacity)
      |        ^
hashmap.c:41:24: error: expected ‘;’ before ‘}’ token
   41 |   hash(, long capacity)
      |                        ^
      |                        ;
   42 | }
      | ~                       
Compilation failed
69a7561
Thu 25 Apr 2024 04:03:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
77bdce8
Sat 27 Apr 2024 02:43:44 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
5a77300
Sat 27 Apr 2024 03:08:31 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
4316139
Sat 27 Apr 2024 03:21:38 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
cde06d4
Sat 27 Apr 2024 03:24:04 AM UTC: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  1|5
total_score: 10/70
1ff9a90
Sat 27 Apr 2024 03:33:58 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:45: error: ‘Bucket’ undeclared (first use in this function)
   46 |           map->buckets[pos] = malloc(sizeof(Bucket));
      |                                             ^~~~~~
hashmap.c:46:45: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c027a2b
Sat 27 Apr 2024 03:36:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:45: error: ‘buckets’ undeclared (first use in this function)
   46 |           map->buckets[pos] = malloc(sizeof(buckets));
      |                                             ^~~~~~~
hashmap.c:46:45: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
40ce62a
Sat 27 Apr 2024 03:37:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
30d45cc
Sat 27 Apr 2024 03:38:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7bb0ca0
Sat 27 Apr 2024 04:52:16 AM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:32: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
   83 |           if (map->buckets[pos]!=NULL& strcmp(map->buckets[pos]->key, key) == 0){
      |                                ^
cc1: all warnings being treated as errors
Compilation failed
46ac439
Sat 27 Apr 2024 05:01:22 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
baabc7a
Sat 27 Apr 2024 05:19:20 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
4d50bf0
Sat 27 Apr 2024 05:20:01 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
995ee15
Sat 27 Apr 2024 05:46:26 AM UTC: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:115:9: error: unused variable ‘currentPair’ [-Werror=unused-variable]
  115 |   Pair *currentPair = map->buckets[map->current];
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e0d275
Sat 27 Apr 2024 05:49:18 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:117:11: error: unused variable ‘currentPair’ [-Werror=unused-variable]
  117 |     Pair *currentPair = map->buckets[map->current];
      |           ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a801c1d
Sat 27 Apr 2024 05:54:15 AM UTC: 
 hashmap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  12|2
total_score: 50/70
2445962
Sat 27 Apr 2024 05:56:24 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
563bec7
Sat 27 Apr 2024 05:57:34 AM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:108:28: error: expected expression before ‘)’ token
  108 |         if (pair != NULL &&) {
      |                            ^
Compilation failed
90ba0da
